# mtk-atlas

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
devices/: generic-mtk.yaml  xt2513-1.yaml
docs/: architecture.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: adb.rs  app_state.rs  commands.rs  detection_service.rs  executor.rs  fastboot.rs  kernel.rs  lib.rs  logger.rs  main.rs  mtk.rs  pipeline.rs  process.rs  profile.rs  root.rs  tools.rs
src-tauri/src/mtk/: capabilities.rs
