[package]
name = "mtk-atlas"
version = "0.6.0"
HEAD
description = "cross-platform desktop utility"
authors = ["Damion"]
edition = "2025"
description = "android adb/fastboot app"
authors = [""]
edition = "2021"
57a8e37 (Prepare v0.6.0 release)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mtk_atlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["process", "time"] }
zip = "0.6"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "5.0"
sha2 = "0.10.9"


[[bin]]
name = "mtk-atlas"
path = "src/main.rs"


